<resources>
    <string name="app_name">pemesanErte</string>
    <string name="erte">Erte Travel</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="account">Doesn\'t have an account?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="contact">Phone Number</string>
    <string name="address">Address</string>
    <string name="male">Laki-laki</string>
    <string name="female">Perempuan</string>
    <string name="kota_asal">From</string>
    <string name="kota_tujuan">To</string>
    <string name="jadwal">Departure</string>
    <string name="jumlah_penumpang">Number of Passenger(s)</string>
    <string name="cari">Search</string>
    <string name="satu">1</string>
    <string name="dua">2</string>
    <string name="welcome">Welcome</string>

    <string name="jalan">Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas,
        Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</string>

    <string name="where">Where will you go?</string>
    <string name="detail_order">Detail Order</string>
    <string name="id_pemesan">ID Pemesan</string>

    <string-array name="spinner_kota">
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Pekanbaru</item>
    </string-array>
    <string-array name="spinner_jumlah">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="id_pesanan">
        <item>P1</item>
        <item>P2</item>
        <item>P3</item>
        <item>P10</item>
        <item>P2</item>
        <item>P3</item>
        <item>P151</item>
        <item>P2</item>
        <item>P3</item>
        <item>P1987</item>
        <item>P2</item>
        <item>P3</item>
    </string-array>

    <string-array name="jadwal_trip">
        <item>2 Oktober 2020</item>
        <item>7 Oktober 2020</item>
        <item>8 Oktober 2020</item>
        <item>2 Oktober 2020</item>
        <item>7 Oktober 2020</item>
        <item>8 Oktober 2020</item>
        <item>2 Oktober 2020</item>
        <item>7 Oktober 2020</item>
        <item>8 Oktober 2020</item>
        <item>2 Oktober 2020</item>
        <item>7 Oktober 2020</item>
        <item>8 Oktober 2020</item>
    </string-array>

    <string-array name="kota_asal">
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
    </string-array>

    <string-array name="kota_tujuan">
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Payakumbuh</item>
        <item>Bukittinggi</item>
    </string-array>

    <string-array name="array_name">
        <item>Takumi Kitamura</item>
        <item>Takumi Kitamura</item>
        <item>Takumi Kitamura</item>
        <item>Takumi Kitamura</item>
        <item>Takumi Kitamura</item>
        <item>Takumi Kitamura</item>
    </string-array>

    <string-array name="array_gender">
        <item>(Laki-laki)</item>
        <item>(Perempuan)</item>
        <item>(Laki-laki)</item>
        <item>(Laki-laki)</item>
        <item>(Perempuan)</item>
        <item>(Laki-laki)</item>
    </string-array>

    <string-array name="array_asal">
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
    </string-array>

    <string-array name="array_tujuan">
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
        <item>From: Jurusan Sistem Informasi, Fakultas Teknologi Informasi, Universitas Andalas, Limau Manis, Pauh, Limau Manis, Kec. Pauh, Kota Padang, Sumatera Barat 25163</item>
    </string-array>

    <string-array name="array_phone">
        <item>Phone: 089878908989</item>
        <item>Phone: 089878908989</item>
        <item>Phone: 089878908989</item>
        <item>Phone: 089878908989</item>
        <item>Phone: 089878908989</item>
        <item>Phone: 089878908989</item>
    </string-array>

    <string-array name="array_cost">
        <item>Additional Cost: - </item>
        <item>Additional Cost: - </item>
        <item>Additional Cost: - </item>
        <item>Additional Cost: - </item>
        <item>Additional Cost: - </item>
        <item>Additional Cost: - </item>
    </string-array>

    <string-array name="array_seat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string-array name="array_sopir">
        <item>Sopir Satu</item>
        <item>Belum Ada Sopir</item>
    </string-array>

    <string-array name="array_trip">
        <item>T1</item>
        <item>T2</item>
    </string-array>


    <string-array name="array_edit_status">
        <item>Booking</item>
        <item>Cancelled</item>
    </string-array>


    <string-array name="array_jam">
        <item>14.00</item>
        <item>16.00</item>
    </string-array>

    <string-array name="spinner_jenis_kelamin">
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>


</resources>