<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--        <ImageView-->
        <!--            android:layout_width="150dp"-->
        <!--            android:layout_height="150dp"-->
        <!--            android:src="@drawable/minivan" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Register Erte Travel"
            android:fontFamily="sans-serif-light"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical"
            android:background="@drawable/box_rounded"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:drawableStart="@drawable/ic_name"
                        android:drawablePadding="10dp"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <EditText
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:drawableStart="@drawable/ic_username"
                        android:drawablePadding="10dp"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/ic_email_black_24dp"
                        android:drawablePadding="10dp"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_baseline_radio_button_checked_24"
                        tools:ignore="VectorDrawableCompat" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center">

                        <RadioButton
                            android:id="@+id/radio_male"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:text="@string/male"
                            android:onClick="onRadioButtonClicked" />

                        <RadioButton
                            android:id="@+id/radio_female"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/female"
                            android:onClick="onRadioButtonClicked" />
                    </RadioGroup>
                </LinearLayout>

                <EditText
                        android:id="@+id/edt_contact"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/contact"
                        android:inputType="phone"
                        android:maxLines="1"
                        android:layout_marginTop="10dp"
                        android:drawableStart="@drawable/ic_baseline_phone_android_24"
                        android:drawablePadding="10dp"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/address"
                        android:inputType="textLongMessage"
                        android:drawableStart="@drawable/ic_baseline_home_24"
                        android:drawablePadding="10dp"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_rounded"
                    android:text="@string/register"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white_greyish"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>