<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/erte_judul">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/erte"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/erte_judul"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/kota_asal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kota_asal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_asal"
            android:entries="@array/spinner_kota"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/kota_asal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/kota_tujuan">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kota_tujuan"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_tujuan"
            android:entries="@array/spinner_kota"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/kota_tujuan"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/jadwal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jadwal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_jadwal"
            android:drawableLeft="@drawable/ic_baseline_date_range_24"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/jadwal"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/jumlah_penumpang">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_penumpang"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spiner_jumlah_penumpang"
            android:entries="@array/spinner_jumlah"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_cari"
        android:background="@color/colorPrimary"
        android:layout_below="@id/jumlah_penumpang"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/white"
        android:text="@string/cari"
        android:textStyle="bold"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Home"-->
<!--        android:textSize="50sp"-->
<!--        android:textStyle="bold"-->
<!--        android:layout_centerInParent="true"/>-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_navigation"
        app:itemBackground="@color/colorPrimary"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/menu_navigation"
        android:layout_alignParentBottom="true"/>




</RelativeLayout>