<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_android"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <ImageView-->
<!--            android:layout_width="150dp"-->
<!--            android:layout_height="150dp"-->
<!--            android:src="@drawable/minivan" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/erte"
            android:textSize="24sp"
            android:textColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_email_black_24dp"
                        tools:ignore="VectorDrawableCompat" />

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:background="@null"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        app:srcCompat="@drawable/ic_lock_black_24dp"
                        tools:ignore="VectorDrawableCompat"
                        android:layout_marginEnd="10dp" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@null"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1px"
                        android:background="@color/white_greyish" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/white_greyish"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account"
                        android:layout_marginRight="5dp"
                        android:layout_gravity="center"
                        android:textSize="12sp"
                        android:textColor="@android:color/black" />

                    <TextView
                        android:id="@+id/tv_register"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
</RelativeLayout>